# rust-ray-tracer

./: Cargo.toml  README.md
renders/: 10-bounds.ppm  11-earthmap.ppm  11-earthmap2.ppm  11-earthmap3.ppm  12-scenes.ppm  13-quads.ppm  13-quads2.ppm  13-quads3.ppm  13-quads4.ppm  13-quads5.ppm  13-quads6.ppm  14-planars.ppm  14-planars2.ppm  14-planars3.ppm  15-mesh.ppm  16-emit.ppm  16-emit2.ppm  17-cornell.ppm  17-cornell2.ppm  17-cornell3_instances.ppm  17-cornell4_volumes.ppm  4-world_aa.ppm  5-bounce.ppm  6-materials.1.ppm  6-materials.2-fuzz.ppm  6-materials.3-glass.ppm  6-materials.3-glass_refract.ppm  6-materials.4-bubble.ppm  6-materials.5-hollow.ppm  6-materials.6-schlick.ppm  7-vfov.ppm  8-look.1.ppm  8-look.2-zoom.ppm  9-triangle.ppm  9-triangle2.ppm
resources/SpaceShip-Fighter/: SpaceShip-Fighter.mtl
src/: camera.rs  core.rs  main.rs  models.rs  scenes.rs  surfaces.rs
src/core/: interval.rs  rays.rs  vec3.rs
src/models/: bounds.rs  hittable.rs  shapes.rs  volumes.rs
src/surfaces/: materials.rs  textures.rs
